Hide overflow; fix scrollbar volors

--- a/src/styl/imports/sidebar.styl
+++ b/src/styl/imports/sidebar.styl
@@ -55,8 +55,7 @@ section.container
 			border-bottom 1px solid #0e0f10
 
 			.container
-				width 100%
-				height 100%
+				overflow hidden
 
 				ul
 					width 100%
@@ -130,12 +129,10 @@ section.container
 				width 8px
 				
 			&::-webkit-scrollbar-thumb
-				background #3e4044
-				border-radius 20px
+				background #bbb
 
 			&::-webkit-scrollbar-track
-				background #444 
-				border-radius 20px
+				background #3e4044 
 		
 		.social
 			width 100%
